# Printix_Services_Automation

./: .gitignore  README.md  pyproject.toml  pytest.ini
APITest/: pyvenv.cfg
Reports/: 00aed9cf-b547-4121-be7e-23346d1d84ef-attachment.txt  047d0f37-c032-4b59-8a8b-123c074387b0-result.json  07bc844b-20a2-482b-aa0d-2d045f5adcca-attachment.txt  0ba54c51-0e87-41ee-85c8-dab3a2b40e89-attachment.txt  0c51e3f2-84cb-487c-abf3-eda927a3e36f-attachment.txt  1253f69e-d55d-4865-abc4-b858ae574eef-attachment.txt  1541e291-fdab-478a-961f-4399a5893f63-result.json  1b42c314-ebe7-4a70-8c74-03d99414ad6c-attachment.txt  1b505ea9-79d6-4ce7-8581-bc40180082e6-attachment.txt  1ba46f03-5715-4198-959e-aa5cdc631d65-attachment.txt  1c4fa778-c4d1-4958-a4f9-eec434cb5de2-result.json  1ee306da-fde7-4453-8847-db686dac41d8-result.json  20fa9f97-d25c-4609-a517-357493820545-result.json  214a8e38-d3dd-49cc-b56c-b465128ec1e0-attachment.txt  268e070e-3380-40f6-837c-22a9acf3edb4-attachment.txt  293105c2-7531-4fe4-a729-761e3b17fbd2-attachment.txt  2b59c4e0-216c-44bd-bebc-fe959c0d2ee3-result.json  2cb3d6f1-afb9-415e-ab83-059544311393-attachment.txt  3373e713-983b-4a58-b6ae-94661136c270-result.json  35d1ffc1-1903-4a80-be73-da036bf65130-attachment.txt  3a4f68d7-fb06-4b55-ab81-728581a8f172-result.json  3e0818e0-1241-408b-a8ad-ac3bf1003f35-attachment.txt  403e0852-934b-4db9-b3c2-c96bc28845bd-result.json  43c47403-f3cb-4b2e-9059-7b70ce4d6121-result.json  44a9559b-6104-4107-9c03-7aa99e6ec1a3-result.json  4582c390-35fb-4a0d-b4af-56a51b0ffe66-result.json  47ae11a7-0164-4b48-ab01-b862f7bcfea1-attachment.txt  (+66 more)
(+20 files in other folders)
